Fixed images being too small

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -356,7 +356,7 @@
     display: block;
   }
 
-  .columns .non-singleton-img-wrapper img {
+  .columns.columns:not(.history) .non-singleton-img-wrapper img {
     height: 3.125rem;
     width: unset;
   }
